# htmx-example

./: Cargo.toml  README.md
src/: main.rs
src/controllers/: counter_controllers.rs  mod.rs  view_controllers.rs
src/domain/: models.rs  repositories.rs
src/repositories/: in_memory_repository.rs
src/use_cases/: counter_use_case.rs  mod.rs
templates/: counter.jinja  index.jinja  style.html
